--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h2 class="titulo">CATALOGO</h2>
                 <div class="galeria-port">
                     <div class="imagen-port">
-                        <img src="img/A21S.jpg" alt="">
+                        <img src="img/a21s.jpg" alt="">
                         <div class="hover-galeria">
                             <a href="https://wa.me/c/51989814811"><img src="img/icono1.png" alt=""></a>
                             <p>SAMSUNG A21S</p>
