--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="contenedor sobre-nosotros">
             <h2 class="titulo">Nuestro producto</h2>
             <div class="contenedor-sobre-nosotros">
-                <img src="img/ANUNCIO1.JPG" alt="" class="imagen-about-us">
+                <img src="img/ANUNCIO1.jpg" alt="" class="imagen-about-us">
                 <div class="contenido-textos">
                     <h3><span>1</span>Los mejores productos</h3>
                     <p>Líderes en el mercado de smartphones, Amarok - telefonía móvil es el mejor sitio para comprar celulares libres de fábrica y con ACCESORIOS COMPLETOS.</p>
