--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="imagen-port">
                         <img src="img/a21s.jpg" alt="">
                         <div class="hover-galeria">
-                            <a href="https://wa.me/c/51989814811"><img src="img/icono1.png" alt=""></a>
+                            <a href="https://wa.me/message/ATHHJIT3DKSWP1"><img src="img/icono1.png" alt=""></a>
                             <p>SAMSUNG A21S</p>
                             <h2 class="preciocelu">S/820</h2>
                         </div>
@@ -58,7 +58,7 @@
                     <div class="imagen-port">
                         <img src="img/a51.jpg" alt="">
                         <div class="hover-galeria">
-                            <a href="https://wa.me/c/51989814811"><img src="img/icono1.png" alt=""></a>
+                            <a href="https://wa.me/message/ATHHJIT3DKSWP1"><img src="img/icono1.png" alt=""></a>
                             <p>SAMSUNG A51</p>
                             <h2 class="preciocelu">S/1140</h2>
                         </div>
@@ -66,7 +66,7 @@
                     <div class="imagen-port">
                         <img src="img/iphone6s.jpg" alt="">
                         <div class="hover-galeria">
-                            <a href="https://wa.me/c/51989814811"><img src="img/icono1.png" alt=""></a>
+                            <a href="https://wa.me/message/ATHHJIT3DKSWP1"><img src="img/icono1.png" alt=""></a>
                             <p>IPHONE 6s</p>
                             <h2 class="preciocelu">S/800</h2>
                         </div>
@@ -74,7 +74,7 @@
                     <div class="imagen-port">
                         <img src="img/A10s.jpg" alt="">
                         <div class="hover-galeria">
-                            <a href="https://wa.me/c/51989814811"><img src="img/icono1.png" alt=""></a>
+                            <a href="https://wa.me/message/ATHHJIT3DKSWP1"><img src="img/icono1.png" alt=""></a>
                             <p>SAMSUNG A10s</p>
                             <h2 class="preciocelu">S/600</h2>
                         </div>
@@ -82,7 +82,7 @@
                     <div class="imagen-port">
                         <img src="img/note8.jpg" alt="">
                         <div class="hover-galeria">
-                            <a href="https://wa.me/c/51989814811"><img src="img/icono1.png" alt=""></a>
+                            <a href="https://wa.me/message/ATHHJIT3DKSWP1"><img src="img/icono1.png" alt=""></a>
                             <p>REDMI NOTE 8</p>
                             <h2 class="preciocelu">S/550</h2>
                         </div>
@@ -90,7 +90,7 @@
                     <div class="imagen-port">
                         <img src="img/p30lite.jpg" alt="">
                         <div class="hover-galeria">
-                            <<a href="https://wa.me/c/51989814811"><img src="img/icono1.png" alt=""></a>
+                            <<a href="https://wa.me/message/ATHHJIT3DKSWP1"><img src="img/icono1.png" alt=""></a>
                             <p>HUAWEI P30</p>
                             <h2 class="preciocelu">S/850</h2>
                         </div>
@@ -98,7 +98,7 @@
                     <div class="imagen-port">
                         <img src="img/Y8P.jpg" alt="">
                         <div class="hover-galeria">
-                            <a href="https://wa.me/c/51989814811"><img src="img/icono1.png" alt=""></a>
+                            <a href="https://wa.me/message/ATHHJIT3DKSWP1"><img src="img/icono1.png" alt=""></a>
                             <p>HUAWEI Y8P</p>
                             <h2 class="preciocelu">S/920</h2>
                         </div>
@@ -106,7 +106,7 @@
                     <div class="imagen-port">
                         <img src="img/Y9S.jfif" alt="">
                         <div class="hover-galeria">
-                            <a href="https://wa.me/c/51989814811"><img src="img/icono1.png" alt=""></a>
+                            <a href="https://wa.me/message/ATHHJIT3DKSWP1"><img src="img/icono1.png" alt=""></a>
                             <p>HUAWEI Y9S</p>
                             <h2 class="preciocelu">S/900</h2>
                         </div>
